# nilo-cpp

./: .gitignore  Makefile  README.md
autotools/: Makefile  Makefile.am  Makefile.in  config.status  configure  configure.ac  myapp
autotools/autom4te.cache/: output.0  output.2  traces.0  traces.2
builders/autotools/: Makefile.am  Makefile.in  configure.ac  configure~  libtool
builders/autotools/autom4te.cache/: output.0  output.1  output.2  traces.0  traces.1  traces.2
builders/autotoolsnolt/: Makefile  Makefile.am  Makefile.in  blah  config.status  configure  configure.ac  myapp
builders/autotoolsnolt/autom4te.cache/: output.1  output.2  traces.0  traces.1
builders/cmake/: CMakeLists.txt
builders/meson/: .gitkeep  meson.build  meson_options.txt
cmake/: CMakeLists.txt
meson/: meson.build
src/.deps/: *.Po
